--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: java
 jdk: oraclejdk8
+cache:
+  directories:
+    - $HOME/.m2
+script:
+  - mvn clean install -Pcoverage coveralls:report --batch-mode --errors
