--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: java
 jdk: oraclejdk8
+sudo: false
+cache:
+  directories:
+    - $HOME/.m2
+script:
+  - mvn clean install -Pcoverage --batch-mode --errors
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
