--- a/pom.xml
+++ b/pom.xml
@@ -70,18 +70,6 @@
                     <target>${jdk.version}</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.opentangerine</groupId>
-                <artifactId>ot-readme-maven</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -105,6 +93,27 @@
                                 <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>doc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- // FIXME GG: in progress, add to the main pipeline
+                                          when released in the maven central -->
+                        <groupId>com.opentangerine</groupId>
+                        <artifactId>ot-readme-maven</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>generate</goal>
                                 </goals>
                             </execution>
                         </executions>
