--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ cache:
   directories:
     - $HOME/.m2
 script:
-  - mvn clean install -Pcoverage,style --batch-mode --errors
+  - mvn clean install -Pcoverage,qulice --batch-mode --errors
 after_success:
   - bash <(curl -s https://codecov.io/bash)
