--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,9 @@
                         <version>0.17.1</version>
                         <configuration>
                             <license>file:${basedir}/LICENSE.txt</license>
+                            <excludes combine.children="append">
+                                <exclude>findbugs:~.*</exclude>
+                            </excludes>
                         </configuration>
                         <executions>
                             <execution>
