--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,24 @@ cache:
   directories:
     - $HOME/.m2
 script:
-  - mvn clean install -Pcoverage,qulice --batch-mode --errors
+  - mvn clean install -Pcoverage,qulice --batch-mode --errors --settings $TRAVIS_DIR/settings.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+env:
+  global:
+    - TRAVIS_DIR="`pwd`/.travis"
+deploy:
+  -
+    provider: script
+    script: $TRAVIS_DIR/publish.sh
+    on:
+      repo: opentangerine/ot-watch
+      branch: master
+      jdk: oraclejdk8
+  -
+    provider: script
+    script: $TRAVIS_DIR/publish.sh
+    on:
+      repo: opentangerine/ot-watch
+      tags: true
+      jdk: oraclejdk8
