--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,6 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5</version>
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
@@ -178,7 +177,14 @@
             </build>
         </profile>
         <profile>
-            <id>sonatype</id>
+            <id>ossrh</id>
+            <properties>
+                <gpg.keyname>${env.GPG_KEYNAME}</gpg.keyname>
+                <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
+                <gpg.defaultKeyring>false</gpg.defaultKeyring>
+                <gpg.publicKeyring>${env.TRAVIS_DIR}/pubring.gpg</gpg.publicKeyring>
+                <gpg.secretKeyring>${env.TRAVIS_DIR}/secring.gpg</gpg.secretKeyring>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -232,7 +238,6 @@
                         <configuration>
                             <serverId>oss.sonatype.org</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <description>${project.version}</description>
                         </configuration>
                         <executions>
                             <execution>
