--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ cache:
 script:
   - echo COMPILE
   - echo $TRAVIS_DIR
-  - echo $TRAVIS_BUILD/.travis
+  - echo $TRAVIS_BUILD_DIR/.travis
 #  - mvn clean install -Pcoverage,qulice --batch-mode --errors
 #after_success:
 #  - bash <(curl -s https://codecov.io/bash)
 env:
   global:
-    - TRAVIS_DIR="TRAVIS_BUILD_DIR/.travis"
+    - TRAVIS_DIR="$TRAVIS_BUILD_DIR/.travis"
 deploy:
   -
     provider: script
