#7: added autoReleaseAfterClose flag

--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,7 @@
                         <configuration>
                             <serverId>ossrh</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                         <executions>
                             <execution>
